# kobra-full-stack-ai-2

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.override.yml  docker-compose.yml
.opencode/: opencode.json
.opencode/docs/: architecture.md  frontend-gotchas.md  local-dev.md  realtime-voice.md
apps/agent/: Dockerfile  pyproject.toml  requirements.txt
apps/agent/src/: main.py
apps/dashboard/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/dashboard/src/: main.tsx
apps/dashboard/src/components/: App.tsx  ChatTranscript.tsx  HistoryChart.tsx  SellAnimationPanel.tsx  useRealtimeVoice.ts
apps/dashboard/src/styles/: app.css
apps/market-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/market-service/src/: index.ts
