[tool.poetry]
name = "agent"
version = "0.1.0"
description = "Python agent service with voice transcription and LangGraph tool routing."
authors = ["Kobra <kobra@example.com>"]
readme = "README.md"
packages = [{ include = "agent_python" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

fastapi = "^0.115.0"
uvicorn = { version = "^0.30.6", extras = ["standard"] }

pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"

httpx = "^0.27.0"

langgraph = "^0.2.39"
langchain-core = "^0.3.27"

langchain-openai = "^0.2.5"

python-multipart = "^0.0.9"

mcp = "^1.1.1"

orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poetry.scripts]
agent = "agent_python.main:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"